# oggm-scripts

./: .coveragerc  README.md  lps_requirements.yml  pyproject.toml  requirements.txt
notebooks/: dash_l1_export.ipynb  desp_stream.ipynb  l1_dashboard_mockup.ipynb  lps_demo.ipynb  lps_jupyter_dashboard.ipynb
src/oggm_scripts/: datacube_calib.py  lps_dashboard.py  main.py  plotting.py
