[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oggm-scripts"
version = "0.0.2"
authors = [
    { name = "DTCG Contributors", email = "" },
]
description = "DTCG API"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "OGGM",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "shapely",
    "requests",
    "configobj",
    "netcdf4",
    "xarray",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
    "coveralls",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme >= 1.1",
]
dev = [
    "dtcg[tests,docs]",
    "hatchling >= 1.12",
    "build >= 0.7",
    "pylint >= 2.16.1",
    "flake8 >= 6.0",
    "black >= 23.1",
    "isort",
]

[project.urls]
Documentation = "https://oggm.readthedocs.io/"
Source = "https://github.com/OGGM/oggm"
Tracker = "https://github.com/OGGM/oggm/issues"

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]

[tool.hatch.build.targets.sdist]
packages = ["dtcg"]
exclude = [
    "logs",
    "*.png",
    "*.vtu",
    "*.csv",
    "*.nc",
    "*.bat",
    "*.sh",
    "*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["oggm_scripts"]
